2006-02-08 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on smgl-fhs (for directory structure)

2006-02-06 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on gnupg (for SOURCE verification)

2005-12-09 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 3.0.16
	* BUILD: Removed incorporated patches
	* bash-3.0-avoid_WCONTINUED-1.patch: deleted
	* bash-3.0-display_wrap-1.patch: deleted

2005-10-13 Eric Sandall <eric@sandall.us>
	* bash-3.0.tar.gz.sig,bash-doc-3.0.tar.gz.sig: Updated to sha512 hash

2005-09-26 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* INSTALL: Added some missing SCRIPT_DIRECTORY references and two missing
	  '\' continuations for the if statements (thanks to David Brown)

2005-09-25 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* bashrc: Set PS1 (doesn't fall over from profile, thanks Arwed)
	* bash_logout: Moved to skel/bash_logout with the other skeleton files
	* INSTALL,FINAL: Move installation of shell files from FINAL to INSTALL
	  and use install_config_file so they're tracked (Bug #9473)
	  Added profile.d/ with all the profile.d scripts (dummy, editor.sh,
	  lc.sh) and removed the pop_script(), popld_script, pop_two(),
	  todays_sedit(), and todasld_sedit() scripts
	  Install all profile.d files with install_config_file
	  Removed recursion -> iteration code (install_config_file will now
	  let the user know there's been a change)
	  Removed FINAL

2005-09-24 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* skel/bashrc,bashrc: Should not set PATH, otherwise paths set with
	  /etc/profile.d/ become 'erased' for every non-login shell

2005-09-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: fix typo in SOURCE2_GPG: $SOURCE -> $SOURCE2

2005-09-09 Eric Sandall <eric@sandall.us>
	* DETAILS: Don't explicitly list GNU_URL mirrors
	  Updated UPDATED to force testing of my changes =}
	  Updated to GPG keys
	* PRE_BUILD: Use `unpack_file 2` for SOURCE2