@@ -10,6 +10,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
         WEB_SITE=http://cnswww.cns.cwru.edu/~chet/bash/bashtop.html
          ENTERED=20010922
          UPDATED=20050926
+      PATCHLEVEL=1
       LICENSE[0]=GPL2
        BUILD_API=2
            SHORT="Bourne Again SHell for the GNU operating system"
