@@ -44,6 +44,10 @@ for i in dummy editor.sh lc.sh;  do
   fi
 done  &&
 
+#Install configuration file for the lc.sh script
+install_config_file $SCRIPT_DIRECTORY/profile.d/locale.conf  \
+                    $INSTALL_ROOT/etc/sysconfig/locale       &&
+
 if  install_config_file  $SCRIPT_DIRECTORY/profile   \
                          $INSTALL_ROOT/etc/profile;  then
   chmod  0755  $INSTALL_ROOT/etc/profile
